--- a/grids/global_id_mapping.json
+++ b/grids/global_id_mapping.json
@@ -14,17 +14,17 @@
     "3X414Lh312cfMiVfxwHu2$": 13,
     "3X414Lh312cfMiVfxwG2yz": 14,
     "18rQOBs86vdKwAL24AiR0p": 15,
-    "2FU7NM7Vr3IBm9jCPWRFOf": 16,
-    "0z5x4pFABubaY5uElUM8wU": 17,
+    "0z5x4pFABubaY5uElUM8wU": 16,
+    "2FU7NM7Vr3IBm9jCPWRFOf": 17,
     "3X414Lh312cfMiVfxwG6mB": 18,
     "3X414Lh312cfMiVfxwHuSf": 19,
     "1Utb1wR7$FoUgVB5uzF5kz": 20,
-    "0ZydjbAXXE$ftDxw6ws3GB": 21,
-    "0ZydjbAXXE$ftDxw6ws3G5": 22,
-    "0ZydjbAXXE$ftDxw6ws3GA": 23,
-    "2FU7NM7Vr3IBm9jCPWRF7T": 24,
-    "3X414Lh312cfMiVfxwHuTK": 25,
-    "3X414Lh312cfMiVfxwGS94": 26,
+    "2FU7NM7Vr3IBm9jCPWRF7T": 21,
+    "0ZydjbAXXE$ftDxw6ws3GB": 22,
+    "0ZydjbAXXE$ftDxw6ws3G5": 23,
+    "0ZydjbAXXE$ftDxw6ws3GA": 24,
+    "3X414Lh312cfMiVfxwGS94": 25,
+    "3X414Lh312cfMiVfxwHuTK": 26,
     "2Q2eU2TdLOO63FLXtFcYGe": 27,
     "0_mn7CW$ahlhnkUKYh4eBt": 28,
     "3X414Lh312cfMiVfxwGSAC": 29,
@@ -35,84 +35,23 @@
     "3mNy1A9VihwKuspfSaSmSs": 34,
     "3X414Lh312cfMiVfxwG4Gb": 35,
     "26R4GGj8v8EAchpBZVtRyu": 36,
-    "2FU7NM7Vr3IBm9jCPWRFNO": 37,
-    "3Lu$xo6H6tCcItc73_vOJI": 38,
+    "3Lu$xo6H6tCcItc73_vOJI": 37,
+    "2FU7NM7Vr3IBm9jCPWRFNO": 38,
     "26R4GGj8v8EAchpBZVtR1R": 39,
     "0G8iBTkv2qAR6U7dZi_e58": 40,
     "0ZydjbAXXE$ftDxw6ws3Jp": 41,
-    "0ZydjbAXXE$ftDxw6ws3Jo": 42,
-    "0ZydjbAXXE$ftDxw6ws3JC": 43,
-    "0ZydjbAXXE$ftDxw6ws3JE": 44,
-    "0ZydjbAXXE$ftDxw6ws3JD": 45,
+    "0ZydjbAXXE$ftDxw6ws3JD": 42,
+    "0ZydjbAXXE$ftDxw6ws3Jo": 43,
+    "0ZydjbAXXE$ftDxw6ws3JC": 44,
+    "0ZydjbAXXE$ftDxw6ws3JE": 45,
     "0ZydjbAXXE$ftDxw6ws3J8": 46,
     "0ZydjbAXXE$ftDxw6ws3JA": 47,
-    "0ZydjbAXXE$ftDxw6ws3IZ": 48,
-    "0ZydjbAXXE$ftDxw6ws3IX": 49,
-    "0ZydjbAXXE$ftDxw6ws3IW": 50,
-    "0ZydjbAXXE$ftDxw6ws3IY": 51,
-    "0ZydjbAXXE$ftDxw6ws3Iz": 52,
-    "0ZydjbAXXE$ftDxw6ws3I$": 53,
+    "0ZydjbAXXE$ftDxw6ws3IY": 48,
+    "0ZydjbAXXE$ftDxw6ws3IZ": 49,
+    "0ZydjbAXXE$ftDxw6ws3IX": 50,
+    "0ZydjbAXXE$ftDxw6ws3IW": 51,
+    "0ZydjbAXXE$ftDxw6ws3I$": 52,
+    "0ZydjbAXXE$ftDxw6ws3Iz": 53,
     "3RJvdtay16xQ_ZgYEsHJZi": 54,
-    "2jDf5z0IUNguvW$4sahgUd": 55,
-    "3X414Lh312cfMiVfxwHwX6": 56,
-    "3X414Lh312cfMiVfxwHwYT": 57,
-    "3X414Lh312cfMiVfxwHwWV": 58,
-    "3X414Lh312cfMiVfxwHwRQ": 59,
-    "3X414Lh312cfMiVfxwHwEM": 60,
-    "1L0XOZF$2plsA2zn5ILXUL": 61,
-    "3X414Lh312cfMiVfxwHwSK": 62,
-    "3X414Lh312cfMiVfxwG26R": 63,
-    "0opCWrxCMmcobjG25cOcXv": 64,
-    "3X414Lh312cfMiVfxwHw8i": 65,
-    "3RJvdtay16xQ_ZgYEsHJx9": 66,
-    "32XkwB6b3a7M3HKF7KiSsd": 67,
-    "3X414Lh312cfMiVfxwHwyc": 68,
-    "3X414Lh312cfMiVfxwHwZ6": 69,
-    "3X414Lh312cfMiVfxwHwRe": 70,
-    "3X414Lh312cfMiVfxwG24h": 71,
-    "3ne0YqQa5LdAUphTsV9sXE": 72,
-    "3X414Lh312cfMiVfxwHwyM": 73,
-    "3X414Lh312cfMiVfxwHwz4": 74,
-    "3X414Lh312cfMiVfxwG2cc": 75,
-    "0qtGb9Kc18y9dIpeJBPOFo": 76,
-    "2FU7NM7Vr3IBm9jCPWRFEp": 77,
-    "2FU7NM7Vr3IBm9jCPWRFTY": 78,
-    "0YeXrLmqTN3pD7T2HA8u2G": 79,
-    "3X414Lh312cfMiVfxwGTdz": 80,
-    "1hos7jB2fYw0nN4nmCKZQa": 81,
-    "3X414Lh312cfMiVfxwHwcw": 82,
-    "3X414Lh312cfMiVfxwGSFv": 83,
-    "3X414Lh312cfMiVfxwHw$b": 84,
-    "3X414Lh312cfMiVfxwG2hK": 85,
-    "3X414Lh312cfMiVfxwG2BB": 86,
-    "0V8jkUg_b1hPaRUuZTQPCU": 87,
-    "1dhO9WqzI1fwzc$lt8RCqo": 88,
-    "0w1adDCDe3M0PC5U7uY6$z": 89,
-    "3RJvdtay16xQ_ZgYEsHJUV": 90,
-    "3X414Lh312cfMiVfxwG6ps": 91,
-    "3tq0o0OgNeGxHXpa7EgvWz": 92,
-    "3X414Lh312cfMiVfxwHwGb": 93,
-    "3X414Lh312cfMiVfxwHwbE": 94,
-    "3X414Lh312cfMiVfxwHwaF": 95,
-    "0qtGb9Kc18y9dIpeJBPOIG": 96,
-    "3X414Lh312cfMiVfxwHwhO": 97,
-    "26R4GGj8v8EAchpBZVtQ0j": 98,
-    "3oWQrLSSI9iEspkhakd8rB": 99,
-    "26R4GGj8v8EAchpBZVtQ$n": 100,
-    "182Cya4zeR7TpV2MKOKJ6Q": 101,
-    "3X414Lh312cfMiVfxwG7jY": 102,
-    "19pWAbbwC9dlak5sGkQjBU": 103,
-    "26R4GGj8v8EAchpBZVtQux": 104,
-    "1oEHNbBOZesyu2CZcTXKBs": 105,
-    "26R4GGj8v8EAchpBZVtQxu": 106,
-    "0kBdLEOuMCL2qgqCnVeJJG": 107,
-    "26R4GGj8v8EAchpBZVtQ1E": 108,
-    "0trUMme53xc8Nm93uDqac$": 109,
-    "0x4rFHqafG3ipv7wIa9N2A": 110,
-    "26R4GGj8v8EAchpBZVtQ_e": 111,
-    "2N8jgTJrdjJ9yDXFVKSkgJ": 112,
-    "2FU7NM7Vr3IBm9jCPWRFUY": 113,
-    "2qZ0qcXgPzJcfkU4ns78DQ": 114,
-    "0yVZh7ffDDhgY0RVdNPvqd": 115,
-    "3RSOtwXKrA0eIR34pdDEv_": 116
+    "2jDf5z0IUNguvW$4sahgUd": 55
 }
