Added voro cloud

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,6 +167,7 @@ catkin_install_python(PROGRAMS
   scripts/detection/bim2ros.py
   scripts/detection/pathfollower.py
   scripts/navigation/TSP.py
+  scripts/navigation/voro.py
   
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
